--- a/production/css/header.css
+++ b/production/css/header.css
@@ -9,7 +9,7 @@
   left: 0;
   z-index: 5;
   width: 100%;
-  height: var(--header-height);
+  height: 60px;
   overflow: visible;
   background-color: var(--white) !important;
   border-bottom: 1px solid var(--color-border-default) !important;
@@ -31,11 +31,15 @@
   }
 
   + #mobile-header {
-    top: var(--header-height);
+    top: 60px;
   }
 
   @media screen and (max-width: 690px) {
-    height: var(--header-height) !important;
+    height: 45px !important;
+
+    + #mobile-header {
+      top: 45px;
+    }
   }
 }
 
